@@ -1,5 +1,7 @@
 Revision history for App-EUMM-Upgrade
 
+        Option to skip searching for github parent repository
+
 0.24    2015-04-12
         Perl::Meta is used
         Better reindentation when outer block is removed
